--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,7 @@
 <div>
-
+<img src="/public/images/beer.png" width="400px" height="400px" >
+    <ul>
+        <li> <a href="/beers">Check the Beers!</a> </li>
+        <li> <a href="/random-beers">Check the Random Beers!</a></li>
+    </ul>
 </div>
