--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,9 +9,9 @@
 <body>
     <nav>
         <ul>
-        <li> <h1> <a href="">Home</a></h1>  </li>
-        <li> <h1> <a href=""></a> Beers</h1> </li>
-        <li> <h1> <a href=""> Random Beers</a> </h1> </li> 
+        <li> <h1> <a href="/">Home</a></h1>  </li>
+        <li> <h1> <a href="/beers"> Beers</a> </h1> </li>
+        <li> <h1> <a href="/random-beers"> Random Beers</a> </h1> </li> 
         </ul>
     </nav>
 {{{body}}}
